--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -66,3 +66,12 @@ html, body {
 	list-style-type: none;
 }
 
+.user-actions > li > a {
+	text-decoration: none;
+	color: black;
+}
+
+.user-actions > li > a:hover {
+	color: #636b6f;
+}
+
