--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -49,10 +49,10 @@ html, body {
     margin-bottom: 30px;
 }
 
-.map {
+/*.map {
 	width: 100%;
 	height: 400px;
-}
+}*/
 .title-container {
 	margin-top: 200px;
 	text-align: center;
