edit page added

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -79,3 +79,34 @@ html, body {
     width: 289px;
     height: 189px;
 }
+
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputfile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: green;
+    display: inline-block;
+    border: 1px solid;
+    border-color: green;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: red;
+}
+
+.inputfile:focus + label {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+}
